# room-env

./: .gitignore  Can-an-RL-agent-learn-a-more-complicated environment?.md  Capturing dynamic knowledge graphs with human-like memory systems by reinforcement learning.md  Makefile  README-v0.md  README-v1.md  README-v2.md  README-v3.md  README.md  TODOs.md  brainstorming.ipynb  environment_creation.ipynb  idea-sketch.md  room-env-v0.ipynb  room-env-v1.ipynb  room-env-v2-convergence.ipynb  room-env-v2.ipynb  room-env-v3-convergence.ipynb  room-env-v3.ipynb  setup.cfg
.github/workflows/: docs.yaml  publish-to-pypi.yaml  pytest.yaml
hmm/: hmm.ipynb
miscellaneous/: Capturing dynamic knowledge graphs with human-like memory systems by reinforcement learning.md  collect_conceptnet.py  collect_conceptnet.yaml  create_des_config.py  des-hp-tuning.ipynb
miscellaneous/pomdp/: pomdp.ipynb
notebooks/: 02-Dec-2023.ipynb
pomdp/: pomdp.ipynb
room_env/: __init__.py  create_room2.py  create_room_v2.py  create_room_v3.py  des.py  memory.py  policy.py  utils.py
room_env/data/: des-config-l-v1.json  des-config-m-v1.json  des-config-s-v1.json  des-config-xs-v1.json  des-config-xxs-v1.json  human-names  moving_objects.txt  names-v2.json  room-config-dev-v2.json  room-config-dev-v3.json  room-config-foo-v2.json  room-config-l-different-prob-v2.json  room-config-l-v2.json  room-config-l2-v2.json  room-config-large-01-v3.json  room-config-large-02-q-v3.json  room-config-large-02-v3.json  (+27 more)
test/: test_room_env_v0.py  test_room_env_v1.py  test_room_env_v2.py  test_utils.py
(+17 files in other folders)
