[metadata]
name = room_env
version = 0.0.0
author = 
author_email = 
description = The Room environment
long_description = file: README.md
long_description_content_type = text/markdown
url = 
project_urls =
    Bug Tracker = 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires=
    gymnasium>=0.27.1
    torch>=1.12.1
    PyYAML>=6.0
    tqdm

[options.package_data]
* = data/*

[options.packages.find]
exclude =
    test*