[metadata]
name = room_env
version = 3.0.2
author = Taewoon Kim
author_email = info@humem.ai
description = The Room environment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/humemai/room-env
project_urls =
    Bug Tracker = https://github.com/humemai/room-env/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires=
    gymnasium>=0.27.1,<1
    torch>=1.12.1
    PyYAML>=6.0
    networkx>=3.5
    tqdm
    matplotlib
    Ipython
    rdflib

[options.package_data]
* = data/*

[options.packages.find]
exclude =
    test*
